--- a/Caddyfile
+++ b/Caddyfile
@@ -21,14 +21,14 @@
 	}
 }
 
-adrianjanczenia.net {
+adrianjanczenia.net:443 {
 	encode zstd gzip
 	import static
 	import security
 
-	reverse_proxy  http://front-end:3000
+	reverse_proxy  http://front-end
 }
 
-broker.adrianjanczenia.dev {
+broker.adrianjanczenia.dev:443 {
 	reverse_proxy http://broker-service:8080
 }
