add proxy for websocket

--- a/Caddyfile
+++ b/Caddyfile
@@ -26,6 +26,10 @@ adrianjanczenia.dev {
 	import static
 	import security
 
+	proxy /ws http://front-end:3000 {
+	    websocket
+	}
+
 	reverse_proxy  http://front-end:3000
 }
 
