--- a/Caddyfile
+++ b/Caddyfile
@@ -26,7 +26,7 @@ adrianjanczenia.dev adrianjanczenia.dev:3000/ws {
 	import static
 	import security
 
-	reverse_proxy  http://front-end:3000
+	reverse_proxy  http://front-end
 }
 
 broker.adrianjanczenia.dev {
