--- a/Caddyfile
+++ b/Caddyfile
@@ -21,7 +21,7 @@
 	}
 }
 
-adrianjanczenia.dev adrianjanczenia.dev:3000/ws {
+adrianjanczenia.dev {
 	encode zstd gzip
 	import static
 	import security
