--- a/Caddyfile
+++ b/Caddyfile
@@ -21,7 +21,7 @@
 	}
 }
 
-adrianjanczenia.dev {
+adrianjanczenia.dev adrianjanczenia.dev:3000 {
 	encode zstd gzip
 	import static
 	import security
