--- a/Caddyfile
+++ b/Caddyfile
@@ -21,12 +21,12 @@
 	}
 }
 
-adrianjanczenia.dev adrianjanczenia.dev:3000 {
+adrianjanczenia.dev {
 	encode zstd gzip
 	import static
 	import security
 
-	reverse_proxy  http://front-end:3000
+	reverse_proxy  http://front-end
 }
 
 broker.adrianjanczenia.dev {
