--- a/Caddyfile
+++ b/Caddyfile
@@ -1,34 +1,44 @@
 {
-    email   adrian.janczenia@gmail.com
+    email janczenia.adrian@gmail.com
 }
 
 (static) {
-	@static {
-		file
-		path *.ico *.css *.js *.gif *.jpg *.jpeg *.png *.svg *.woff *.json
-	}
-	header @static Cache-Control max-age=5184000
+    @static {
+        file
+        path *.ico *.css *.js *.gif *.jpg *.jpeg *.png *.svg *.woff *.json
+    }
+    header @static Cache-Control max-age=5184000
 }
 
 (security) {
-	header {
-		# enable HSTS
-		Strict-Transport-Security max-age=31536000;
-		# disable clients from sniffing the media type
-		X-Content-Type-Options nosniff
-		# keep referrer data off of HTTP connections
-		Referrer-Policy no-referrer-when-downgrade
-	}
+    header {
+        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+        X-Content-Type-Options "nosniff"
+        X-Frame-Options "DENY"
+        Referrer-Policy "strict-origin-when-cross-origin"
+        Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"
+    }
 }
 
-adrianjanczenia.dev {
-	encode zstd gzip
-	import static
-	import security
+{$DOMAIN_NAME} {
+    encode zstd gzip
+    import static
+    import security
 
-	reverse_proxy  http://front-end:3000
-}
+    reverse_proxy frontend-service:8080 {
+        header_up Host {host}
+        header_up X-Real-IP {remote_host}
+    }
 
-broker.adrianjanczenia.dev {
-	reverse_proxy http://broker-service
+    handle_errors {
+        rewrite * /error
+        reverse_proxy frontend-service:8080
+    }
+
+    log {
+        output file /var/log/caddy/access.log {
+            roll_size 10mb
+            roll_keep 5
+        }
+    }
 }
