--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,5 @@
 {
-    email janczenia.adrian@gmail.com
+    email adrian.janczenia@gmail.com
 }
 
 (static) {
@@ -16,7 +16,7 @@
         X-Content-Type-Options "nosniff"
         X-Frame-Options "DENY"
         Referrer-Policy "strict-origin-when-cross-origin"
-        Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"
+        Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; script-src 'self' 'unsafe-inline' blob:; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; object-src 'self' blob:; frame-ancestors 'none'; upgrade-insecure-requests;"
     }
 }
 
